force-app/main/default/objects/ExpenseItem__c/ExpenseItem__c.object-meta.xml
<CustomObject>
    <label>Expense Item</label>
    <nameField>
        <displayFormat>EI-{000000}</displayFormat>
        <label>Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>