force-app/main/default/objects/ExpenseItem__c/fields/Expense_Request__c.field-meta.xml
<CustomField>
    <fullName>Expense_Request__c</fullName>
    <label>Expense Request</label>
    <referenceTo>Expense_Request__c</referenceTo>
    <relationshipLabel>Expense Items</relationshipLabel>
    <relationshipName>Expense_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>