force-app/main/default/objects/ExpenseItem__c/fields/Item_Value__c.field-meta.xml
<CustomField>
    <fullName>Item_Value__c</fullName>
    <label>Item Value</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>